WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78767
REGRESSION (
r90471
) - iAd Producer 2.0.1 produces blank pages
https://bugs.webkit.org/show_bug.cgi?id=78767
Summary
REGRESSION (r90471) - iAd Producer 2.0.1 produces blank pages
Brady Eidson
Reported
2012-02-15 17:57:37 PST
REGRESSION (
r90471
) - iAd Producer 2.0.1 produces blank pages The subtle change to "isLoadingInAPISense" did in fact break at least one real world app. An app-specific quirk patch is coming soon.
Attachments
Patch v1 - New setting and app-specific quirk
(5.02 KB, patch)
2012-02-15 18:00 PST
,
Brady Eidson
sam
: review+
beidson
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2012-02-15 18:00:10 PST
Created
attachment 127286
[details]
Patch v1 - New setting and app-specific quirk
Sam Weinig
Comment 2
2012-02-15 18:16:58 PST
Comment on
attachment 127286
[details]
Patch v1 - New setting and app-specific quirk View in context:
https://bugs.webkit.org/attachment.cgi?id=127286&action=review
> Source/WebCore/ChangeLog:12 > + (WebCore::DocumentLoader::isLoadingInAPISense): Return true if the app needs the quirk > + and there are outstanding subresource loads.
Odd spacing here.
> Source/WebCore/loader/DocumentLoader.cpp:452 > + if (m_frame->settings()->needsIsLoadingInAPISenseQuirk() && !m_subresourceLoaders.isEmpty()) > + return true;
Why is this not using a check from RuntimeApplicationChecks.h?
> Source/WebCore/page/Settings.h:530 > + void setNeedsIsLoadingInAPISenseQuirk(bool enabled) { m_needsIsLoadingInAPISenseQuirk = enabled; } > + bool needsIsLoadingInAPISenseQuirk() const { return m_needsIsLoadingInAPISenseQuirk; }
Please add a comment indicating what this quirk is.
Brady Eidson
Comment 3
2012-02-15 18:22:11 PST
(In reply to
comment #2
)
> (From update of
attachment 127286
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=127286&action=review
> > > Source/WebCore/ChangeLog:12 > > + (WebCore::DocumentLoader::isLoadingInAPISense): Return true if the app needs the quirk > > + and there are outstanding subresource loads. > > Odd spacing here. > > > Source/WebCore/loader/DocumentLoader.cpp:452 > > + if (m_frame->settings()->needsIsLoadingInAPISenseQuirk() && !m_subresourceLoaders.isEmpty()) > > + return true; > > Why is this not using a check from RuntimeApplicationChecks.h?
We've never done version checks from WebCore before. While it's technically possible, I opted to stick with the pattern we've historically used to do version checks in WebKit/Mac.
> > > Source/WebCore/page/Settings.h:530 > > + void setNeedsIsLoadingInAPISenseQuirk(bool enabled) { m_needsIsLoadingInAPISenseQuirk = enabled; } > > + bool needsIsLoadingInAPISenseQuirk() const { return m_needsIsLoadingInAPISenseQuirk; } > > Please add a comment indicating what this quirk is.
Gotcha. Thanks!
Alexey Proskuryakov
Comment 4
2013-03-16 22:50:29 PDT
Looks like this was committed in <
http://trac.webkit.org/changeset/107995
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug