<rdar://problem/10616280> and https://bugs.webkit.org/show_bug.cgi?id=78767 REGRESSION (r90471) - iAd Producer 2.0.1 produces blank pages

Reviewed by Sam Weinig.

Source/WebCore:

No new tests. (Subtle API change attached to a specific application)

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::isLoadingInAPISense): Return true if the app needs the quirk
and there are outstanding subresource loads.

* page/Settings.cpp:
(WebCore::Settings::Settings):
* page/Settings.h:
(WebCore::Settings::setNeedsIsLoadingInAPISenseQuirk):
(WebCore::Settings::needsIsLoadingInAPISenseQuirk):
(Settings):

Source/WebKit/mac:

* WebView/WebView.mm:
(-[WebView _needsIsLoadingInAPISenseQuirk]):
(-[WebView _preferencesChanged:]):

Canonical link: https://commits.webkit.org/95829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107995 268f45cc-cd09-0410-ab3c-d52691b4dbfc